# esoteric-card-cpp

./: .gitignore  C.txt  CMakeLists.txt  README.md  esoteric-gulf.cpp
cards/: .card-deck.cpp.swp  CMakeLists.txt  Clib.txt  card-dealer.h  card-deck.cpp  card-deck.h  card-factory.cpp  card-factory.h  card-options.h  card-player.cpp  card-player.h  card-rank.cpp  card-rank.h  card-suit.cpp  card-suit.h  card-table.cpp  card.cpp  card.h  guid.h
gulf/: .gulf-factory.h.swp  CMakeLists.txt  Csrc.txt  gulf-factory.cpp  gulf-factory.h
tests/: CMakeLists.txt  card-suit-tests.cc  card-tests.cpp
